fix(web): add missing margin utility class generation #DS-2682

--- a/packages/web/src/scss/settings/_utilities.scss
+++ b/packages/web/src/scss/settings/_utilities.scss
@@ -141,6 +141,18 @@ $utilities: (
             none,
         ),
     ),
+    'margin': (
+        responsive: true,
+        property: margin,
+        class: m,
+        generate-custom-properties: false,
+        values: map.merge(
+                tokens.$spaces,
+                (
+                    auto: auto,
+                )
+            ),
+    ),
     'margin-x': (
         responsive: true,
         property: margin-inline,
